# emulator

./: .gitignore  CMakeLists.txt  test.cpp
src/: CMakeLists.txt  build.sh  devices.c  devices.cpp  devices.h  engine.cpp  engine.h  instructions.c  instructions.h  macros.h  main.c  main.cpp  nes.c  nes.h  util.h
src/6500/: cpu.cpp  cpu.h  debugger.cpp  debugger.h  devices.cpp  devices.h
src/6500/assembler/: assembler.cpp  assembler.h  build-mgw.sh  build.sh  build_lexer-mgw.sh  build_parser.sh  lexer.cpp  lexer.h  main.cpp  parser_main.cpp  (+1 more)
src/6502/: CMakeLists.txt  assembler.cpp  assembler.h  atari2600.h  commodore.h  dev.c  dev.h  devices.c  devices.cpp  devices.h  instructions.c  instructions.h  isa.c  isa.h  nes.c  nes.cpp  nes.h  nes_mappers.cpp  nes_mappers.h  nintendo.cpp  nintendo.h  recompiler.h
src/65c816/: CMakeLists.txt  cpu.h  devices.h  snes.h
src/68k/: CMakeLists.txt  dev.h  devices.h  isa.h
src/c/: ast.h
src/core/: bus.h  cpu.h  device.h  devices.cpp  devices.h  engine.cpp  engine.h  engine_core.cpp  engine_core.h  lexer.h  process.h  ram.h  rom.h  scanner.h  stack.h  utility.h
src/generic/: bus_le16.cpp  bus_le16.h  scanner.cpp  scanner.h  utility.h
src/gui/: CMakeLists.txt  app.cpp  app.h  emulator.ui  main_win.cpp  main_win.h  memview.cpp  memview.h  memview.ui  renderctrl.cpp  renderctrl.h
src/langs/: cpm_basic.h
src/mips/: CMakeLists.txt  dev.h  devices.h  directives.h  isa.h  lib.h
src/old/: build.sh  eng.c  eng.h  macros.h  main.c  util.c  util.h
src/ppc/: devices.h
src/z80/: cpu.cpp  cpu.h  dev.h  devices.h  isa.h
(+95 files in other folders)
